# pulseaudio-modules-droid

./: .gitignore  COPYING  Makefile.am  README  README.md  bootstrap.sh  configure.ac  git-version-gen  meson.build  meson_options.txt
m4/: check_droid_enum.m4
rpm/: multimedia-pulseaudio-modules-droid.spec  precheckin.sh  pulseaudio-modules-droid-boston.spec  pulseaudio-modules-droid-i9305.spec  pulseaudio-modules-droid-keepalive.spec  pulseaudio-modules-droid-mako.spec  pulseaudio-modules-droid-sbj.spec  pulseaudio-modules-droid.spec  pulseaudio-modules-droid.spec.in
src/: Makefile.am  meson.build
src/common/: Makefile.am  config-parser-legacy.c  config-parser-xml.c  config-parser-xml.h  conversion.c  conversion.h  droid-config.c  droid-config.h  droid-util-41qc.h  droid-util-42.h  droid-util-44.h  droid-util-51.h  droid-util-60.h  droid-util-audio.h  droid-util.c  droid-util.h  libdroid-util.pc.in  meson.build  sllist.c  utils.c  version.h
src/common/include/droid/: conversion.h  droid-config.h  droid-util.h  sllist.h  utils.h  version.h
src/droid/: Makefile.am  droid-extcon.c  droid-extcon.h  droid-extevdev.c  droid-extevdev.h  droid-extusbdev.c  droid-extusbdev.h  droid-sink.c  droid-sink.h  droid-source.c  droid-source.h  droid-util-41qc.h  droid-util-42.h  droid-util-44.h  droid-util-51.h  droid-util.c  droid-util.h  keepalive.c  keepalive.h  meson.build  module-droid-card-symdef.h  module-droid-card.c  module-droid-glue-symdef.h  module-droid-glue.c  module-droid-keepalive-symdef.h  module-droid-keepalive.c  module-droid-sink-symdef.h  module-droid-sink.c  module-droid-source-symdef.h  module-droid-source.c
