option('atomic-arm-linux-helpers',
       type : 'boolean',
       value : true,
       description : 'Use inline asm or libatomic_ops instead')
option('atomic-arm-memory-barrier',
       type : 'boolean',
       value : false,
       description : 'Enable memory barriers (only really needed in SMP arm systems)')
option('droid-device',
       type : 'string',
       value : 'generic',
       description : 'Droid device type for possible specific quirks (defaults to generic).')
option('modlibexecdir',
       type : 'string',
       description : 'Specify location where modules will be installed')
